# palettizer

./: README.md  arton-palette.json  kquantize.py  main.py  mtnblack-palette.json  palette.py  quantize-kmeans.py  quantize.py  setup.cfg  setup.py  tikkurila-palette.json
palettizer/: __main__.py  htmlview.py  imgutils.py  main.py  palette.py  quantize.py
palettizer/resources/: arton-palette.json  mtn94-palette.json  mtnblack-palette.json  output-template.html  tikkurila-palette.json
palettizer/templates/: template.html
palettizer/test/: test_htmlview.py  test_imgutils.py  test_palette.py  test_quantize.py  testutils.py
palettizer/test/resources/: test-palette-1.json  test-palette-2.json  test-palette-3.json  test-palette-4.json
palettizerbot/: __main__.py  handlers.py  handlers2.py  initlogging.py  logconfig.py  mvp.py  tgbot.py  userstep.py
palettizerbot/resources/: help.txt  logging.yaml
tgbot/: handlers.py  tgbot.py
