[metadata]
name = palettizer
version = 0.0.1
description=
author=Alexander Ivanov
author_email=adivanov95@gmail.com

[options]
packages = [palettizer, palettizerbot]
install_requires =
    scikit-image
    scikit-learn
    numpy
    imageio
    python-telegram-bot
    pyyaml
    faiss-cpu
python_requires = >=3.6

[options.extras_require]
test =
    pytest

[options.package_data]
* = resources/*.*